# arkanoid

./: .gitignore  .main.cpp.swp  Ball.cpp  Ball.h  Barrier.cpp  Barrier.h  Brick.cpp  Brick.h  CMakeLists.txt  EditMapScene.cpp  EditMapScene.h  GameplayScene.cpp  GameplayScene.h  MenuScene.cpp  MenuScene.h  Platform.cpp  Platform.h  README.md  ResourceManager.cpp  ResourceManager.h  SolidBrick.cpp  SolidBrick.h  asia  main  main.cpp  marcin.txt  read.txt
Debug/: map1.ark  map2.ark  map3.ark  score.txt
Engine/: Ball.cpp  Ball.h  DynamicEntity.cpp  DynamicEntity.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GraphicalEntity.cpp  GraphicalEntity.h  MapManager.h  Platform.cpp  Platform.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  TextEntity.cpp  TextEntity.h
Entities/: Ball.cpp  Ball.h  Barrier.cpp  Barrier.h  Bonus.cpp  Bonus.h  Brick.cpp  Brick.h  ColorBonus.cpp  ColorBonus.h  Platform.cpp  Platform.h  PlatformResizeBonus.cpp  PlatformResizeBonus.h  SolidBrick.cpp  SolidBrick.h
Release/: arkanoid  map1.ark  map2.ark  map3.ark  mapUser.ark  score.txt
Release/res/font/pixcel/: TracerTong.nfo
Scenes/: BestScoresScene.cpp  BestScoresScene.h  EditMapScene.cpp  EditMapScene.h  GameplayScene.cpp  GameplayScene.h  MenuScene.cpp  MenuScene.h  ResultScene.cpp  ResultScene.h
